yoshimi 1.5.9 M

2018-10-12 Will
* Converted remaining truncf calls to FR2Z2I.
  Behaviour is now entirely consistent.
* Temporarily disabled assembler FR2Z2I code.
  It screws up in LV2 :(

2018-10-2 Will
* Changed F2I to FR2Z2I to clarify behaviour.
  i.e. float round to zero to integer.

2018-10-1 Will
* Completed F2I adjustments.
* Started populating with new F2I.

2018-9-30 Will
* BugFix: AddSynth FM mod was cogging notes.
  Only that mod and at notes close to sample rate.
* Improved note/mod oscillator frequency calculations.
* Reinstated a more advanced version of F2I.
  Some misinformation earlier :(

2018-9-27 Will
* Accepted typo checks from debian.
* Some doc corrections.

2018-9-24 Will
* Bugfix voice list out of sync with voice editor.
* Copied in new user guide.
* set new README.txt
* Set version as 1.5.9 release

2018-9-23 Will
* BugFix: CLI not setting midilearn mute.
* Enabled comments in CLI script.
  Also added more error checks.
* Typo corrections:(
* Corrected CLI 'expand' info.
* Updated docs.
* Added Sub Choir to Will_Godfrey_Companion.
* Set version as 1.5.9 rc3

2018-9-19 Will
* BugFix: Failed older manual if current missing.
* Revised CLI status to compress line length.
* Set version as 1.5.9 rc2

2018-9-18 Will
* Most important parts of CLI waveform done.
* Set version as 1.5.9 rc1

2018-9-17 Will
* Started work on CLI waveform controls.

2018-9-16 Will
* Added contributors list to About window.
* Made some startup entries stdout only.
* Removed some instance startup dublication.
* CLI envelope freemode done.
  Some reporting errors and missing checks.
* Improved CLI filter help list.
* Corrected CLI freemode reporting.
* Added CLI freemode error checks.
* Improved CLI envelope help list.

2018-9-15 Will
* Completed CLI scripts.
* Implemented CLI context report control.
* Further CLI clean-ups.
* Implemented CLI formant filter controls
  but needs more testing.

2018-9-14 Will
* Refactored CLI internal messaging.